<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adore_map</name> <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="opensource-ts@dlr.de">DLR-TS</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>adore_math</depend>
  <depend>libproj-dev</depend>
  <depend>libOpenDrive</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>